src/components/PearlChestsLockup/styles.scss
@import '../../styles/colors';

.lockup {
  width: 97%;
  max-width: 880px;
  margin-bottom: 100px;

  &__title {
    font-size: 36px !important;
    line-height: 54px !important;
    font-weight: bold !important;
    text-align: center;
    margin-bottom: 40px !important;
  }

  &__options {
    display: flex;
    flex-wrap: nowrap;
    grid-gap: 20px;

    @media screen and (max-width: 768px) {
      overflow-x: auto;
    }
  }
}

.lockup-option {
  position: relative;
  display: flex;
  flex-direction: column;
  flex: 1 25%;
  min-width: 0;
  border-radius: 20px !important;
  padding: 15px !important;
  text-align: center;

  &__days {
    display: block;
    font-size: 36px !important;
    line-height: 54px !important;
  }

  &__days-label {
    display: block;
    margin-top: -10px !important;
    font-size: 16px !important;
    line-height: 24px !important;
  }

  &__div {
    margin: 15px 0 !important;
  }

  &__label {
    display: flex !important;
    justify-content: center;
    font-size: 12px !important;
    line-height: 18px !important;
    margin-bottom: 5px !important;
  }

  &__value {
    display: block !important;
    font-size: 20px !important;
    line-height: 30px !important;
  }

  &__receipt {
    width: 100%;
    height: auto;
    margin: 5px 0 10px;
  }

  &__nft-name {
    display: block;
    font-size: 16px !important;
    line-height: 24px !important;
    white-space: pre-wrap;
    margin-bottom: 15px !important;
  }

  &__bonus-title {
    display: block;
    font-size: 16px !important;
    line-height: 24px !important;
    color: $otter-blue;
  }

  &__bonus-desc {
    display: block;
    margin-bottom: 10px !important;
    font-size: 12px !important;
    line-height: 18px !important;
    color: $otter-blue;
  }

  &__requirement {
    display: block;
    margin-bottom: 10px !important;
  }

  &__content {
    flex: 1;
  }

  &__badge {
    position: absolute;
    top: 0;
    right: 0;
    width: 60px;
    height: 62px;
    background: $otter-blue;
    color: #fff;
    overflow: hidden;
    box-sizing: border-box;
    padding: 5px;

    &-before {
      position: absolute;
      left: -8px;
      bottom: -42px;
      background: #fff;
      width: 25px;
      height: 60px;
      transform: rotateZ(75deg);
      border-radius: 0 !important;
    }

    &-after {
      position: absolute;
      right: -8px;
      bottom: -42px;
      background: #fff;
      width: 25px;
      height: 60px;
      transform: rotateZ(-75deg);
      border-radius: 0 !important;
    }
  }

  &__badge-label {
    display: block;
  }

  &__badge-value {
    display: block;
    font-size: 20px !important;
    line-height: 30px !important;
    margin-top: -3px !important;
  }

  &__select-btn.transaction-button {
    min-width: 0 !important;
  }

  @media screen and (max-width: 768px) {
    min-width: 195px;
  }

  &__tvl {
    display: flex;
    height: 64px;
    align-items: center;
    justify-content: center;
    background-color: $light-gray100;
    border-radius: 8px;
    gap: 5px;
    margin-bottom: 15px;

    img {
      width: 36px;
      height: 30px;
    }

    div {
      display: flex;
      flex-direction: column;
      align-items: flex-start;
    }

    &__title {
      font-size: 12px;
    }

    &__value {
      color: $clam-pink;
      font-size: 16px;
    }
  }
}

